@@ -132,6 +132,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     file to match reality.
   * Warn in start-stop-daemon if the argument to --name is longer than the
     supported kernel process name size. Closes: #353015, #519128
+  * Do not warn in dpkg-deb when parsing unknown fields with the “Private-”
+    prefix. Based on a patch by Nils Rennebarth. Closes: #353040
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
